--- a/instructores Aerobicos.html
+++ b/instructores Aerobicos.html
@@ -155,9 +155,9 @@ body {
                     <p>Sur</p>
                 </div>
                 <div class=" Portfolio-box tonificacion">
-                	<a href="Instructores Aerobicos/Willian Garzon.html"><img src="img/Instructore Aerobicos/Aerobicos/willian garzon/willian garzon.jpg" alt=""></a>	
-               	  <h3>WILIAN GARZON</h3>
-                    <p>Sur</p>
+                	<a href="Instructores Aerobicos/Willy Ponce.html"><img src="img/Instructore Aerobicos/Aerobicos/Willy Ponce/Willy Ponce.jpg" alt=""></a>	
+               	  <h3>WILLY PONCE</h3>
+                    <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box pasivos">
                 	<a href="instructores Aerobicos.html"><img src="img/Instructore Aerobicos/Aerobicos/Gabriel Aerofitness/gabriel aerofitness.jpg" alt=""></a>	
