--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         	<a href="#"><img src="img/logo1.png" alt=""></a>	
         </figure>	
         <h1 class="animated fadeInDown delay-07s">Instructores Fitness en Ecuador        </h1>
-        <p>Primera plataforma Fitness en Ecuador</p>
+        <p>Primera plataforma Fitness en Ecuador 2018</p>
         <ul class="we-create animated fadeInUp delay-1s">
        	  <li>Los profesores fitness mas destacados deL pais a un solo click..!!</li>
         </ul>
