--- a/Instructores Aerobicos/Willy Ponce.html
+++ b/Instructores Aerobicos/Willy Ponce.html
@@ -82,7 +82,7 @@ body {
 	    <div class="team-leader-blockinstructor clearfix">
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
-	          <div class="team-leader-shadow"><a href="https://www.facebook.com/profile.php?id=100009737109146"></a></div>
+	          <div class="team-leader-shadow"><a href="https://www.facebook.com/william.ponce.5454"></a></div>
 	          <img src="../img/Instructore Aerobicos/Aerobicos/Willy Ponce/Willy PonceP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
