--- a/Instructores Aerobicos/Willy Ponce.html
+++ b/Instructores Aerobicos/Willy Ponce.html
@@ -82,11 +82,11 @@ body {
 	    <div class="team-leader-blockinstructor clearfix">
 	      <!--<div class="team-leader-boxinstructor">-->
 	        <div class="team-leader wow fadeInDown delay-09s">
-	          <div class="team-leader-shadow"><a href="https://www.facebook.com/william.ponce.5454"></a></div>
+	          <div class="team-leader-shadow"><a href="https://www.facebook.com/profile.php?id=100009737109146"></a></div>
 	          <img src="../img/Instructore Aerobicos/Aerobicos/Willy Ponce/Willy PonceP.jpg" alt="">
 	          <ul>
 	            <li><a href="#" class="fa-twitter"></a></li>
-	            <li><a href="https://www.facebook.com/profile.php?id=100009737109146" class="fa-facebook"></a></li>
+	            <li><a href="https://www.facebook.com/william.ponce.5454" class="fa-facebook"></a></li>
 	            <li><a href="#" class="fa-pinterest"></a></li>
 	            <li><a href="#" class="fa-google-plus"></a></li>
               </ul>
@@ -477,7 +477,7 @@ body {
         			<div class="col-md-4 item">
                     <a href="../img/aerobicos/clase de aerobic.jpg" data-lightbox="roadtrip"><img src="../img/aerobicos/clase de aerobic.jpg" class="img-tumbnail" alt=""></img></a>
                     </div>
-        			<div class="col-md-4 item"> <a href="../img/Instructore Aerobicos/Aerobicos/Willy Ponce/photos/willy 6.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Willy Ponce/photos/willy 6.jpg"  class="img-tumbnail" alt=""></img></a></div>
+        			<div class="col-md-4 item"> <a href="../img/aerobicos/clase de step.jpg" data-lightbox="roadtrip"><img src="../img/Instructore Aerobicos/Aerobicos/Willy Ponce/photos/willy 6.jpg"  class="img-tumbnail" alt=""></img></a></div>
         			<div class="col-md-4 item"> <a href="../img/aerobicos/masterclass Aerobic Step.jpg" data-lightbox="roadtrip"><img src="../img/aerobicos/masterclass Aerobic Step.jpg"  class="img-tumbnail" alt=""></img></a></div>
                     <div class="col-md-4 item"> <a href="../img/aerobicos/clase de step.jpg" data-lightbox="roadtrip"><img src="../img/aerobicos/clase de step.jpg"  class="img-tumbnail" alt=""></img></a></div>
                     <div class="col-md-4 item"> <a href="../img/aerobicos/masterclass Aerobic Step.jpg" data-lightbox="roadtrip"><img src="../img/aerobicos/masterclass Aerobic Step.jpg"  class="img-tumbnail" alt=""></img></a></div>
