--- a/Instructores  Fisico Culturismo.html
+++ b/Instructores  Fisico Culturismo.html
@@ -95,6 +95,7 @@ body {
 
 
 <section class="main-section paddindclase" id="Portfolio"><!--main-section-start-->
+<A name="aerobicos"></a>
 	<div class="container">
     	<h2>DONDE NECESITAS TU INSTRUCTOR..?</h2>
     	<h6>Mira los profesionales que estan mas serca de tu ubicacion asi te aseguramos una mejor calidad de servicio...</h6>
@@ -118,9 +119,10 @@ body {
                     <p>San Carlos</p>
                 </div>
                 <div class="Portfolio-box pasivos">
-                	<a href="#"><img src="img/fantasmas/7.jpg" alt=""></a>	
-               	  <h3>Paul</h3>
-                    <p>Pasivo</p>
+                	<a href="Instructores Fisico Culturismo/Edison Ponce.html"><img src="img/Instructores Fisico Culturismo/Edison Ponce/Edison Ponce-iloveimg-resized.jpg" alt=""></a>	
+               	  <h3>Edison Poncel</h3>
+                    <p>Norte</p>
+                    <p>&nbsp;</p>
                 </div>
                 <div class=" Portfolio-box cardio">
                 	<a href="#"><img src="img/fantasmas/2.jpg" alt=""></a>	
