--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -145,8 +145,8 @@ body {
                     <p>Valle</p>
                 </div>
                 <div class=" Portfolio-box cardio">
-                	<a href="Instructores Bailoterapia/Cristian Lastra.html"><img src="img/Instructores Bailoterapia/Cristian Lastra/Cristian Lastra.jpg" alt=""></a>	
-               	  <h3>Cristian Lastra</h3>
+                	<a href="Instructores Bailoterapia/Paul Latino.html"><img src="img/Instructores Bailoterapia/Paul Latino/Paul Latino.jpg" alt=""></a>	
+               	  <h3>Paul Latino</h3>
                     <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box tonificacion" >
@@ -171,14 +171,15 @@ body {
                     <p>valle</p>
       </div>
                 <div class="Portfolio-box pasivos">
-                	<a href="Instructores Bailoterapia/El Artista.html"><img src="img/Instructores Bailoterapia/Artista/Artista.jpg" alt=""></a>	
-               	  <h3>El Artista</h3>
-                    <p>Sur</p>
+                	<a href="Instructores Bailoterapia/El Artista.html"><img src="img/Instructores Bailoterapia/Dika Villota/Diana1-iloveimg-resized.jpg" alt=""></a>	
+               	  <h3>Diana</h3>
+                    <p>Norte</p>
       </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="Instructores Bailoterapia/Paul Latino.html"><img src="img/Instructores Bailoterapia/Paul Latino/Paul Latino.jpg" alt=""></a>	
-               	  <h3>Paul Latino</h3>
-                    <p>centro</p>
+                	<a href="Instructores Bailoterapia/Paul Latino.html"><img src="img/Instructores Bailoterapia/Artista/Artista.jpg" alt=""></a>	
+               	  <h3>El Artista</h3>
+                    <p>Sur</p>
+                    <p>&nbsp;</p>
       </div>
               
     </div>
