--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -171,7 +171,7 @@ body {
                     <p>valle</p>
       </div>
                 <div class="Portfolio-box pasivos">
-                	<a href="Instructores Bailoterapia/El Artista.html"><img src="img/Instructores Bailoterapia/Dika Villota/Diana1-iloveimg-resized.jpg" alt=""></a>	
+                	<a href="Instructores Bailoterapia/Diana Villota.html"><img src="img/Instructores Bailoterapia/Dika Villota/Diana1-iloveimg-resized.jpg" alt=""></a>	
                	  <h3>Diana</h3>
                     <p>Norte</p>
       </div>
