enlace el artista

--- a/instructores Bailoterapia.html
+++ b/instructores Bailoterapia.html
@@ -176,7 +176,7 @@ body {
                     <p>Norte</p>
       </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="Instructores Bailoterapia/Paul Latino.html"><img src="img/Instructores Bailoterapia/Artista/Artista.jpg" alt=""></a>	
+                	<a href="Instructores Bailoterapia/El Artista.html"><img src="img/Instructores Bailoterapia/Artista/Artista.jpg" alt=""></a>	
                	  <h3>El Artista</h3>
                     <p>Sur</p>
                     <p>&nbsp;</p>
