marquee el artista

--- a/Instructores Bailoterapia/El Artista.html
+++ b/Instructores Bailoterapia/El Artista.html
@@ -26,6 +26,17 @@ body {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
+.bandaazul{
+	padding-bottom: 25px;
+	padding-top: 25px;
+}
+.img{
+	display: inline-block;
+	width: 250px;
+	height: 250px;
+	border-radius: 50%;
+	padding-right: 20px
+}
 </style>
 
 <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
@@ -526,7 +537,20 @@ body {
 </div>
 </div><!--c-logo-part-end-->
 <!--main-section team-end-->
-
+<marquee class="bandaazul" scrollamount="3" scrolldelay="5" direction="left" height="300" width="100%" onmouseover="this.stop()" onmouseout="this.start()" bgcolor="#000000">
+    
+	<a href="Nico Bonilla.html"><img src="../img/Instructores Bailoterapia/Nicolas/Nicolasp.jpg" alt="" class="img"></a>
+	<a href="Roberto Tufiño.html"><img src="../img/Instructores Bailoterapia/Roberto Tufiño/Roberto Tufi+-ªop.jpg" alt="" class="img"></a>
+	<a href="Patricio Vallejo.html"><img src="../img/Instructores Bailoterapia/Patricio Vallejo/Patricio Vallejop.jpg" alt="" class="img"></a>
+	<a href="Mauricio Riofrio.html"><img src="../img/Instructores Bailoterapia/Mauricio Riofrio/Mauricio Riofriop.jpg" alt="" class="img"></a>
+	<a href="Mauricio Mora.html"><img src="../img/Instructores Bailoterapia/Mauricio Mora/Mauricio Morap.jpg" alt="" class="img"></a>
+	<a href="Maria Daniela.html"><img src="../img/Instructores Bailoterapia/Maria Daniela/Danielap.jpg" alt="" class="img"></a>
+	<a href="Jonh Espinoza.html"><img src="../img/Instructores Bailoterapia/John Espinoza/Jonh Espinozap.jpg" alt="" class="img"></a>
+	<a href="Giovanni Malca.html"><img src="../img/Instructores Bailoterapia/Giovani Malca/Giovani Malcap.jpg" alt="" class="img"></a>
+	<a href="Cristian Lastra.html"><img src="../img/Instructores Bailoterapia/Dika Villota/Diana1p-iloveimg-resized.jpg" alt="" class="img"></a>
+	<a href="Carli Dance.html"><img src="../img/Instructores Bailoterapia/Carmi Dance/Carmen Dancep.jpg" alt="" class="img"></a>
+	<a href="El Artista.html"><img src="../img/Instructores Bailoterapia/Artista/Artistap.jpg" alt="" class="img"></a>
+</marquee>
 <!--inicio carrusel-->
 
 <div class="container-fluid">
