Emogis pagina Informacion

--- a/informacion.html
+++ b/informacion.html
@@ -10,6 +10,8 @@
 
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
+<!--emogis-->
+<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -130,9 +132,9 @@ Para la primera etapa de este proyecto hemos decidido iniciar con las personas m
         <div class="col-lg-7 col-sm-6 featured-work parrafoinfo">
             	<h2>Pero qué es la presencia digital.?</h2>
             	<p class="padding-b">
-La presencia digital es tener un espacio propio (Página Web) y tener presencia  en la nueva era de las  tecnologías de la información lo que expande de manera exponencial nuestra oportunidades de darnos a conocer al mundo a través de Internet, dicho  esto queremos presentarle a usted la oportunidad de tener su propio espacio en esta nueva era digital y a la vez ser parte de esta innovación en el fitness Ecuatoriano, otros  países a lo largo del mundo ya poseen este tipo de plataformas por lo que hemos querido que nuestro país no quede fuera de esta lista .
-Este espacio consiste en que ud. pueda tener su propia app Web la cual le ayudará a mejorar de manera significativa su calidad como profesional fitness acoplándose a los cambios de la nueva era tecnológica ,para esto nos hemos basado en una idea simple pero a la vez revolucionaria llamada ECONOMÍA COLABORATIVA que consiste en poder aprovechar un recurso al máximo dando a todos la oportunidad de utilizarlo pero reduciendo los costos al mínimo para que sea accesible a la mayor parte de las personas incluyendo las de menores posibilidades.
-</p>
+La presencia digital es tener un espacio propio (Página Web) y tener presencia  en la nueva era de las  tecnologías de la información lo que dispara de manera exponencial nuestra oportunidades de darnos a conocer al mundo a través de Internet, dicho  esto queremos presentarle a usted la oportunidad de tener su propio espacio en esta nueva era digital y a la vez ser parte de esta innovación en el fitness Ecuatoriano, otros  países a lo largo del mundo ya poseen este tipo de plataformas por lo que hemos querido que nuestro país no quede fuera de esta lista .
+Este espacio consiste en que ud. pueda tener su propia App Web la cual le ayudará a mejorar de manera significativa su calidad como profesional fitness acoplándose a los cambios de la nueva era tecnológica ,para esto nos hemos basado en una idea simple pero a la vez revolucionaria llamada ECONOMÍA COLABORATIVA que consiste en poder aprovechar un recurso al máximo dando a todos la oportunidad de utilizarlo pero reduciendo los costos al mínimo para que sea accesible a la mayor parte de las personas, que puedan acceder a este beneficio por su profesionalidad y no solo por su poder adquisitivo, incluyendo así a las personas de menores posibilidades tambien.   <i class="em em-grinning"></i> <i class="em em---1"></i> <i class="em em-flag-ec"></i>
+</p> 
                 <p></p>
             	
                 
@@ -245,15 +247,15 @@ Este espacio consiste en que ud. pueda tener su propia app Web la cual le ayudar
 		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
     	<div class="row">
         	<div class="col-lg-12">
-            	<p class="client-part-haead wow fadeInDown delay-05"><strong>Contar con la seguridad de tener los mejores instructores es una sensación única..!!</strong></p>
+            	<p class="client-part-haead wow fadeInDown delay-05"><strong>La gente que no se una a la evolución de la Tecnología esta destinada a morir profesionalmente</strong></p>
             </div>
         </div>
     	<ul class="client wow fadeIn delay-05s">
         	<li><a href="#">
-            	<img src="img/client-pic1.jpg" alt="">
-            <h3><strong>Mario sanchez</strong></h3>
-                <span><strong>Propietario Pacific GYM</strong></span>
-            </a></li>
+            	<img src="img/Instructore Aerobicos/Aerobicos/Rodolfo López/RodolfoFito-iloveimg-resized.jpg" alt="">
+            <h3><strong>Rodolfo López</strong></h3>
+                <span><strong>CEO Fitness 2.0</strong></span>
+          </a></li>
         </ul>
     </div>
 </section><!--main-section client-part-end-->
