--- a/instructores Aerobicos.html
+++ b/instructores Aerobicos.html
@@ -150,9 +150,9 @@ body {
                     <p>Valle</p>
                 </div>
                 <div class=" Portfolio-box tonificacion" >
-                	<a href="Instructores Aerobicos/Ivan Ayala.html"><img src="img/Instructore Aerobicos/Aerobicos/Ivan Ayala/ivan ayala.jpg" alt=""></a>	
-               	  <h3>IVAN AYALA</h3>
-                    <p>Sur</p>
+                	<a href="Instructores Aerobicos/Ivan Ayala.html"><img src="img/Instructore Aerobicos/Aerobicos/Luis Lanchimba/luis lanchimba-iloveimg-resized1.jpg" alt=""></a>	
+               	  <h3>Luis Lanchimba</h3>
+                    <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box tonificacion">
                 	<a href="Instructores Aerobicos/Willy Ponce.html"><img src="img/Instructore Aerobicos/Aerobicos/Willy Ponce/Willy Ponce.jpg" alt=""></a>	
@@ -160,7 +160,7 @@ body {
                     <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="instructores Aerobicos.html"><img src="img/Instructore Aerobicos/Aerobicos/Gabriel Aerofitness/gabriel aerofitness.jpg" alt=""></a>	
+                	<a href="instructores Aerobicos.html"><img src="img/Instructore Aerobicos/Aerobicos/Gabriel Aerofitness/gabriel 0-iloveimg-resized1.jpg" alt=""></a>	
                	  <h3>GABRILEL AEROFITNESS</h3>
                     <p>Sur</p>
                 </div>
