enlaces desde pagina principal

--- a/instructores Aerobicos.html
+++ b/instructores Aerobicos.html
@@ -150,7 +150,7 @@ body {
                     <p>Valle</p>
                 </div>
                 <div class=" Portfolio-box tonificacion" >
-                	<a href="Instructores Aerobicos/Ivan Ayala.html"><img src="img/Instructore Aerobicos/Aerobicos/Luis Lanchimba/luis lanchimba-iloveimg-resized1.jpg" alt=""></a>	
+                	<a href="Instructores Aerobicos/Luis Lanchimba.html"><img src="img/Instructore Aerobicos/Aerobicos/Luis Lanchimba/luis lanchimba-iloveimg-resized1.jpg" alt=""></a>	
                	  <h3>Luis Lanchimba</h3>
                     <p>Norte</p>
                 </div>
@@ -160,7 +160,7 @@ body {
                     <p>Norte</p>
                 </div>
                 <div class=" Portfolio-box pasivos">
-                	<a href="instructores Aerobicos.html"><img src="img/Instructore Aerobicos/Aerobicos/Gabriel Aerofitness/gabriel 0-iloveimg-resized1.jpg" alt=""></a>	
+                	<a href="Instructores Aerobicos/Gabriel Aerofitness.html"><img src="img/Instructore Aerobicos/Aerobicos/Gabriel Aerofitness/gabriel 0-iloveimg-resized1.jpg" alt=""></a>	
                	  <h3>GABRILEL AEROFITNESS</h3>
                     <p>Sur</p>
                 </div>
